--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "monk": "^3.1.3",
     "path": "^0.12.7",
     "pos": "^0.4.2",
+    "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-mdi": "^0.5.7",
     "react-router": "^3.0.0",
+    "react-router-dom": "^4.1.1",
     "request": "^2.79.0",
     "restify": "^4.2.0",
     "serve-static-restify": "^1.0.0",
