--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "prestart": "webpack",
-    "db": "sudo mongod --dbpath=/data --port 27017"
+    "db": "sudo mongod --dbpath=/data --port 27017",
+    "chat": "node ./chat/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "bluebird": "^3.4.6",
     "classnames": "^2.2.5",
     "co": "^4.6.0",
+    "express": "^4.15.2",
     "jquery": "^3.1.1",
     "lodash": "^4.16.6",
     "mongodb": "^2.2.11",
@@ -30,6 +32,8 @@
     "request": "^2.79.0",
     "restify": "^4.2.0",
     "serve-static-restify": "^1.0.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "windows-1251": "^1.0.0"
   },
   "devDependencies": {
